test/libsolidity/syntaxTests/parsing/payable_without_arguments.sol
contract C {
	function f() public pure {
		address payable q = payable;
	}
}
// ----
// ParserError 2314: (70-71): Expected '(' but got ';'
